Fix minors bugs on mobile header

--- a/public/css/pages/home.css
+++ b/public/css/pages/home.css
@@ -570,7 +570,11 @@ section.section-proof h2 {
     .about-me-section {
         padding: 0rem;
     }
-    
+
+    #navigation {
+        height: 85vh;
+    }
+
     .skills-block {
         margin: 5px;
         margin-top: 40px;
